src/test/resources/org/rust/lang/core/parser/fixtures/ill-formed/enum_vis.rs
enum E {
    pub F // Enum variants are always implicitly public, and `pub` keyword is forbidden here
}
